@@ -3,6 +3,9 @@ New in v0.12.2 (2003/08/??)
 
 Patch by Arkadiusz Patyk fixes building with Python 2.3c1.
 
+Restore of archives made by 0.10.x and earlier fixed, although hard
+link information is not restored.  (Bug reported by Jeff Lessem.)
+
 
 New in v0.12.1 (2003/07/22)
 ---------------------------
